# Flowlab

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.work  probe_depth.js  probe_regime.js  probe_ws.js  run-desk.ps1
.github/workflows/: ci.yml
api/: README.md  go.mod
api/cmd/api/: main.go
api/server/: engine_client.go  engine_client_test.go  feed.go  recorder.go  regime.go  regime_parity_test.go  server.go  server_test.go  storm.go  stream.go
bench/: Cargo.toml  README.md
bench/benches/: chaos_throughput.rs  clustering_throughput.rs  pipeline.rs  replay.rs
bench/src/: lib.rs
chaos/: Cargo.toml  README.md
chaos/docs/: clustering-policy.md
chaos/proptest-regressions/: momentum_ignition.txt
chaos/src/: cancellation_storm.rs  chain.rs  clustering.rs  detection.rs  flash_crash.rs  generators.rs  latency_arb_proxy.rs  lib.rs  momentum_ignition.rs  order_tracker.rs  phantom_liquidity.rs  storm.rs  window.rs
core/: Cargo.toml  README.md  build.rs
core/src/: event.rs  ffi.rs  hot_book.rs  lib.rs  orderbook.rs  state.rs  types.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  BotPanel.tsx  Ladder.tsx  RegimeStrip.tsx  RunPanel.tsx  Spark.tsx  StormPanel.tsx  TradeTape.tsx  styles.css  types.ts  useStream.ts
docs/: feed-design.md  latency-alpha.md  latency-cross-hw.md  reference-vs-hot.md  stack-rationale.md
engine/: Cargo.toml  README.md
engine/src/: backpressure.rs  engine.rs  ich.rs  lib.rs  main.rs  server.rs  source.rs  synthetic.rs  tsc.rs  wire.rs
engine/tests/: ich_real.rs
feed-parser/: README.md  build.zig
feed-parser/src/: event.zig  fuzz.zig  itch.zig  main.zig
flow/: Cargo.toml  README.md
flow/src/: circuit_breaker.rs  imbalance.rs  impact.rs  lib.rs  regime.rs  spread.rs  vpin.rs
hotpath/: CMakeLists.txt  README.md
hotpath/include/flowlab/: ffi.h  hasher.h  orderbook.h  stats.h
hotpath/src/: ffi.cpp  hasher.cpp  orderbook.cpp  stats.cpp
ingest/: README.md  go.mod
ingest/cmd/ingest/: main.go
ingest/feed/: websocket.go  websocket_test.go
ingest/mmap/: ring.go  ring_test.go  ring_windows.go
lab/: Cargo.toml  README.md
lab/src/: executor.rs  lib.rs  report.rs  strategy.rs
replay/: Cargo.toml  README.md
replay/src/: engine.rs  file_source.rs  itch.rs  lib.rs  log.rs  moldudp.rs  ring_reader.rs  snapshot.rs  udp_source.rs  wal.rs
replay/tests/: ring_ipc.rs
tests/: Cargo.toml  README.md
tests/chaos/: burst_desync.rs  corruption_injection.rs  long_run_drift.rs
tests/e2e/: cancel_heavy.rs  clean_replay.rs  cpp_hasher_agreement.rs  snapshot_resume.rs  stress_overflow.rs
tests/fuzz/: itch_parser.rs  orderbook_consistency.rs
tests/src/: lib.rs
verify/: Cargo.toml  README.md
verify/src/: hasher.rs  lib.rs  verifier.rs
