[workspace]
resolver = "2"
members = [
    "core",
    "replay",
    "flow",
    "chaos",
    "lab",
    "verify",
    "bench",
    "tests",
    "engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Proprietary — see LICENSE in the repository root.
license = "LicenseRef-Proprietary"
repository = "https://github.com/Faraone-Dev/flowlab"

[workspace.dependencies]
flowlab-core = { path = "core" }
flowlab-replay = { path = "replay" }
flowlab-flow = { path = "flow" }
flowlab-chaos = { path = "chaos" }
flowlab-lab = { path = "lab" }
flowlab-verify = { path = "verify" }

# shared deps
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
