[package]
name = "flowlab-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
flowlab-core = { workspace = true }
flowlab-replay = { workspace = true }
flowlab-flow = { workspace = true }
flowlab-chaos = { workspace = true }

[features]
# Enables the C++/Zig FFI arms of the pipeline benchmark.
# Requires the static libs under hotpath/build and feed-parser/zig-out.
native = ["flowlab-core/native"]

[[bench]]
name = "replay"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bin]]
name = "latency_apply"
path = "src/bin/latency_apply.rs"

[dev-dependencies]
criterion = { workspace = true }
