[package]
name = "flowlab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hashbrown = "0.15"
ahash = { version = "0.8", default-features = false }

[build-dependencies]
cc = "1.1"

[features]
native = [] # Enable C++/Zig FFI linking (builds C++ via cc-rs, links Zig static lib)
