[package]
name = "flowlab-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flowlab-engine"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
flowlab-core   = { workspace = true }
flowlab-flow   = { workspace = true }
flowlab-replay = { workspace = true }

bincode    = "1.3"
serde      = { workspace = true }
serde_json = "1"
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
clap       = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
rand       = "0.8"
memmap2    = { workspace = true }
